--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://js-cdn.music.apple.com/musickit/v1/musickit.js"></script>
 </head>
 <body>
+  <!-- SIDEBAR -->
   <aside class="sidebar">
     <h1 class="logo">Music</h1>
     <nav>
@@ -17,17 +18,21 @@
     </nav>
   </aside>
 
+  <!-- HUVUDVY -->
   <main id="app">
+    <!-- REKOMMENDATIONER -->
     <section id="home" class="view active">
       <h2>Rekommenderat för dig</h2>
       <div class="card-grid" id="recommendations"></div>
     </section>
 
+    <!-- SÖK -->
     <section id="search" class="view">
       <input type="text" id="searchInput" placeholder="Sök efter musik…" />
       <div class="card-grid" id="searchResults"></div>
     </section>
 
+    <!-- BIBLIOTEK -->
     <section id="library" class="view">
       <h2>Ditt bibliotek</h2>
       <div class="list" id="libraryContent"></div>
